<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_button_lable">Search</string>
    <string name="query_hint">Enter search term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="settings_screen_title">Advanced search options</string>
    <string name="image_size_lable">Image Size</string>
    <string name="color_filter_lable">Color Filter</string>
    <string name="image_type_lable">Image Type</string>
    <string name="site_filter_lable">Site Filter</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
