<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tp.gridimagesearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_screen_title"
        android:id="@+id/tv_Heading"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:id="@+id/first"
        android:layout_below="@+id/tv_Heading"
        android:layout_height="50dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/image_size_lable"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_ImageSize"
            android:paddingTop="0dp"
            android:entries="@array/image_size_array"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:id="@+id/second"
        android:layout_below="@+id/first"
        android:layout_height="50dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/color_filter_lable"
            android:id="@+id/textView3"
            android:layout_marginTop="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_ColorFilter"
            android:paddingTop="0dp"
            android:entries="@array/color_filter_array"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/third"
        android:layout_below="@+id/second"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/image_type_lable"
            android:id="@+id/textView4"
            android:layout_marginTop="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sp_ImageType"
            android:paddingTop="0dp"
            android:entries="@array/image_type_array"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/fourth"
        android:layout_below="@+id/third">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/site_filter_lable"
            android:id="@+id/textView5"

            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Site"
            android:hint="yahoo.com"
            android:maxLines="1"
             />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/bt_Save"
        android:layout_below="@+id/fourth"
        android:layout_centerHorizontal="true"
        android:onClick="onSaveClicked" />

</RelativeLayout>
